<resources>
    <string name="app_name">What Weather</string>
    <string name="weather_api_key">0227e6010071a6909fc84a8b6c5d2037</string>
    <string name="no_data_found_yet">No Data Found Yet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="degCelsius">134.5° C</string>
    <string name="demo_date">5/7/2018</string>
    <string name="demoDay">Tuesday</string>
    <string name="demoLocation">Dhaka</string>
    <string name="todo">TODO</string>
    <string name="scattered_cloud">Scattered Cloud</string>
    <string name="max">Max</string>
    <string name="_17_0_u00b0_c">17.0° C</string>
    <string name="min">Min</string>
    <string name="sun_rise">Sun rise</string>
    <string name="demoTime">07:09:24 AM</string>
    <string name="sun_set">Sun Set</string>
    <string name="humidity">Humidity</string>
    <string name="_86">86%</string>
    <string name="pressure">Pressure</string>
    <string name="_1021_71_hpa">1021.71 hPa</string>
    <string name="today">Today</string>
    <string name="min_9_2_c">Min 9.2 C</string>
    <string name="january_11_2018">January 11, 2018</string>
    <string name="max_9_2_c">Max 9.2 C</string>
</resources>
