<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_weight="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_height="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_9_2_c"
            android:textSize="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="80dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:src="@drawable/sun"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"

        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/january_11_2018"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_9_2_c"
            android:textSize="18sp"/>

    </LinearLayout>
</LinearLayout>