<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacground"
    android:orientation="vertical"
    tools:context=".fragments.WeatherFragment">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:padding="20dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/temperatureTextView"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degCelsius"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/dateTextView"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_date"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/dayTextView"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demoDay"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/locationTextView"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demoLocation"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_margin="30dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/clouds"
                android:contentDescription="@string/todo" />
            <TextView
                android:id="@+id/weatherDescTextView"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scattered_cloud"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:baselineAligned="false">


        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights">
            <TextView
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/maxTempTextView"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_17_0_u00b0_c"
                android:textSize="20sp"/>
            <TextView

                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/minTempTextView"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_17_0_u00b0_c"
                android:textSize="20sp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="80dp"
                android:src="@drawable/temperature"
                android:contentDescription="@string/todo" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun_rise"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                />

            <TextView
                android:id="@+id/sunriseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demoTime"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun_set"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                />
            <TextView
                android:id="@+id/sunsetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demoTime"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:src="@drawable/sunset"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                />

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_86"
                android:textColor="@color/colorText"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                />
            <TextView
                android:id="@+id/pressureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1021_71_hpa"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="80dp"
                android:src="@drawable/rain"
                android:textColor="@color/colorText"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>